TPSF Servicerutiner - bugfix
-Fixet bug som oppstår i Internet Explorer, ved at flere inputfelter overlapper hverandre
-Lagt til en sjekk på value til de aktuelle outputfeltene, slik at felter med [object Object] fjernes fra listen.
-Lagt til en midlertidig løsning på at inputfelter overlapper annet innhold.

--- a/tps-forvalteren-provider/tps-forvalteren-provider-web/src/main/web-src/src/styles/service-rutine.less
+++ b/tps-forvalteren-provider/tps-forvalteren-provider-web/src/main/web-src/src/styles/service-rutine.less
@@ -11,8 +11,9 @@
   .tps-vk-top {
     margin-bottom: 10px;
     background-color: white;
-    padding: 10px 15px;
+    padding: 10px 15px 50px;
     position: relative;
+
 
     .tps-vk-input-container {
       margin: 4px 10px 5px 0;
@@ -257,5 +258,10 @@
 
 .tpsf-sr-inputform-legend {
   padding-bottom: 15px;
+}
+
+.tpsf-sr-inputform-fields {
+  margin-bottom: 20px;
+  padding-bottom: 40px;
 }
 
